# OncologyScanner

./: .gitignore  LICENSE  NER_EN.ipynb  README.md  analyse_text.py  display_extracted_info.html  display_plaintext.html  main.py  pyproject.toml  requirements.txt
src/: analyse_text.py  extract_text_from_pdf.py  main.py
src/templates/: form.html
templates/: form.html
