[tool.poetry]
name = "OncologyScanner"
version = "0.1.0"
description = "A project for text extraction and analysis in oncology-related documents."
authors = ["Hamza Afzal", "Matt Stammers"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
spacy = "*"
PyPDF2 = "*"
pandas = "*"
numpy = "*"
sparknlp = "*"
pyspark = "*"
ipykernel = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
